Make style.css Global

--- a/Teacher/teacher.html
+++ b/Teacher/teacher.html
@@ -23,8 +23,8 @@
   <div class="sidebar">
     <div class="sidebar-header">
       <div class="logo">
-        <i class="fas fa-chalkboard-teacher"></i>
-        <h4>TEACHER PANEL</h4>
+        <i class="fas fa-graduation-cap"></i>
+        <h4>EDHELM</h4>
       </div>
     </div>
     
@@ -161,26 +161,20 @@
       <!-- Today's Schedule -->
       <div class="chart-card">
         <div class="chart-header">
-          <h5><i class="fas fa-calendar-day"></i> Today's Schedule</h5>
-          <div class="schedule-header-actions">
-            <input type="date" class="date-picker" value="2025-05-24">
-            <button class="btn btn-sm btn-outline-primary">
-              <i class="fas fa-sync-alt"></i> Refresh
-            </button>
-          </div>
+          <h5>Today's Schedule</h5>
         </div>
         <div class="schedule-list">
-          <div class="schedule-item completed">
+          <div class="schedule-item">
             <div class="time">09:00 - 10:00</div>
             <div class="subject">Mathematics - Class 10A</div>
             <div class="room">Room 101</div>
           </div>
-          <div class="schedule-item current">
+          <div class="schedule-item">
             <div class="time">10:30 - 11:30</div>
             <div class="subject">Mathematics - Class 10B</div>
             <div class="room">Room 102</div>
           </div>
-          <div class="schedule-item upcoming">
+          <div class="schedule-item">
             <div class="time">12:00 - 13:00</div>
             <div class="subject">Algebra - Class 9A</div>
             <div class="room">Room 103</div>
