--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -14,29 +14,29 @@
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <!-- Sidebar -->
+   <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
             <h3>School Admin</h3>
         </div>
         <ul class="nav flex-column">
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/dashboard.html">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/student.html">
                     <i class="fas fa-users"></i> Students
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/teacher.html">
                     <i class="fas fa-chalkboard-teacher"></i> Teachers
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/class.html">
                     <i class="fas fa-school"></i> Classes
                 </a>
             </li>
@@ -48,7 +48,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">
                     <i class="fas fa-money-bill-wave"></i> Fees
-                    <span class="badge bg-danger badge-notification">12</span>
+                    <!-- <span class="badge bg-danger badge-notification">12</span> -->
                 </a>
             </li>
             <li class="nav-item">
@@ -67,7 +67,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#">       
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </a>
             </li>
