--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,7 +18,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/includes/css/style.css" />
+  <link rel="stylesheet" href="../includes/css/style.css" />
 </head>
 <body>
 
