--- a/admin/class.html
+++ b/admin/class.html
@@ -12,7 +12,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS CDN -->
-     <link rel="stylesheet" href="/includes/css/style.css">
+     <link rel="stylesheet" href="../includes/css/style.css">
      <!-- Chart JS -->
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
