--- a/admin/syllabus.html
+++ b/admin/syllabus.html
@@ -9,7 +9,7 @@
 <!-- Font Awesome Icons CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <!-- CSS CDN -->
-<link rel="stylesheet" href="/includes/css/style.css">
+<link rel="stylesheet" href="../includes/css/style.css">
 <!-- Chart JS -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- Bootstrap CSS -->
