--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -21,22 +21,22 @@
         </div>
         <ul class="nav flex-column">
             <li class="nav-item active">
-                <a class="nav-link" href="/admin/dashboard.html">
+                <a class="nav-link" href="../admin/dashboard.html">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/student.html">
+                <a class="nav-link" href="../admin/student.html">
                     <i class="fas fa-users"></i> Students
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/teacher.html">
+                <a class="nav-link" href="../admin/teacher.html">
                     <i class="fas fa-chalkboard-teacher"></i> Teachers
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/class.html">
+                <a class="nav-link" href="../admin/class.html">
                     <i class="fas fa-school"></i> Classes
                 </a>
             </li>
