--- a/admin/teacher.html
+++ b/admin/teacher.html
@@ -128,12 +128,39 @@
         <!-- Right: Icons -->
         <div class="d-flex align-items-center gap-4">
           <!-- Bell Icon with Badge -->
-          <div class="position-relative">
-            <i class="fas fa-bell fs-5 text-dark"></i>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              3
-            </span>
-          </div>
+          <div class="dropdown position-relative">
+     <!-- Bell Icon -->
+        <a href="#" class="d-flex align-items-center text-dark text-decoration-none dropdown-toggle" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+       <i class="fas fa-bell fs-5"></i> 
+       <!-- Badge for the number of notifications -->
+       <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+         3
+        </span>
+        </a>
+          
+            <!-- Dropdown for notifications -->
+          <!-- Notification Dropdown -->
+  <ul class="dropdown-menu dropdown-menu-end custom-dropdown-width" aria-labelledby="notificationDropdown">
+    <!-- Notification Header -->
+    <li class="dropdown-item text-dark d-flex justify-content-between">
+      <span><b>Notification (4)</b></span>
+      <a href="#" class="text-primary">Mark All as Read</a>
+    </li>
+    <li><hr class="dropdown-divider"></li>
+
+    <!-- Notification Items -->
+    <li><a class="dropdown-item" href="#">New message from Sarah</a></li>
+    <li><a class="dropdown-item" href="#">John commented on your post</a></li>
+    <li><a class="dropdown-item" href="#">3 new assignments are due</a></li>
+    <li><a class="dropdown-item" href="#">Your profile has been updated</a></li>
+
+    <li><hr class="dropdown-divider"></li>
+          <li class="text-center w-100">
+      <a class="dropdown-item" href="#"><b>View all notifications</b></a>
+    </li>
+  </ul>
+         </div>
+
           <!-- Profile Dropdown -->
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-dark text-decoration-none dropdown-toggle" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -147,6 +174,7 @@
               <li><a class="dropdown-item" href="#">Logout</a></li>
             </ul>
           </div>
+          
         </div>
       </div>
     </nav>
@@ -234,42 +262,48 @@
 <div class="d-flex justify-content-between mt-3 mb-3 w-100 gap-4 ps-4 pe-4">
     <!-- Left: Search Bar -->
     <div class="d-flex w-25">
-        <input type="text" id="search" class="form-control w-100" placeholder="Search" onkeyup="filterTable()" />
+        <input type="text" id="search" class="form-control w-100" placeholder="Search" onkeyup=" filterTable()" />
     </div>
 
     <!-- Right: Filter Date, Status, and Select Department -->
-    <div class="d-flex  w-50 gap-3 justify-content-end">
-        <!-- Filter Date Select Dropdown -->
-        <select class="form-select w-25" aria-label="Filter Date Select" style="font-size: 14px!important;">
-            <option selected>Filter Date Select</option>
-            <option value="1">Weekly</option>
-            <option value="2">Monthly</option>
-            <option value="3">Yearly</option>
-        </select>
+    <div class="d-flex w-50 gap-3 justify-content-end">
+    <!-- Filter Date Select Dropdown -->
+    <select class="form-select w-25" aria-label="Filter Date Select" style="font-size: 14px!important;">
+        <option selected>Filter Date Select</option>
+        <option value="1">Weekly</option>
+        <option value="2">Monthly</option>
+        <option value="3">Yearly</option>
+    </select>
 
-        <!-- Status Select Dropdown -->
-        <select class="form-select w-25" aria-label="Status Select" style="font-size: 14px!important;">
-            <option selected>Status Select</option>
-            <option value="1">Active</option>
-            <option value="2">On Hold</option>
-            <option value="3">Pending</option>
-            <option value="4">Completed</option>
-        </select>
+    <!-- Status Select Dropdown -->
+    <select class="form-select w-25" id="statusSelect" aria-label="Status Select" style="font-size: 14px!important;" onchange=" filterTableSelect()">
+        <option selected>Status Select</option>
+        <option value="Active">Active</option>
+        <option value="On Leave">On Leave</option>
+        <option value="Pending">Pending</option>
+        <option value="Completed">Completed</option>
+    </select>
 
-        <!-- Select Department Dropdown -->
-        <select class="form-select w-25" aria-label="Select Department" style="font-size: 14px!important;">
-            <option selected>Select Department</option>
-            <option value="1">Science</option>
-            <option value="2">Arts</option>
-        </select>
-    </div>
+    <!-- Select Department Dropdown -->
+    <select class="form-select w-25" id="departmentSelect" aria-label="Select Department" style="font-size: 14px!important;" onchange=" filterTableSelect()">
+        <option selected>Select Department</option>
+        <option value="Physics">Physics</option>
+        <option value="Computer Science">Computer Science</option>
+        <option value="Chemistry">Chemistry</option>
+        <option value="Biology">Biology</option>
+        <option value="History">History</option>
+        <option value="Mathematics">Mathematics</option>
+    </select>
+</div>
 </div>
 
-<!-- table -->
+
+<!-- table data -->
 <table class="table ps-3 pe-3" id="myTable" data-toggle="table" data-sortable="true" data-classes="table">
     <thead>
         <tr class="custom-header">
-            <th class="ps-3 pe-4"><input type="checkbox" id="selectAll" /></th> <!-- Checkbox for Select All -->
+            <!-- Checkbox for Select All -->
+            <th class="ps-3 pe-4"><input type="checkbox" id="selectAll"onclick="toggleSelectAll()" /></th> 
             <th class="ps-4 pe-4">Photo</th>
             <th class="ps-4 pe-4" data-sortable="true">Name</th>
             <th class="ps-4 pe-4" data-sortable="true">Subject</th>
@@ -278,7 +312,7 @@
             <th class="ps-4 pe-4">Action</th>
         </tr>
     </thead>
-    <tbody id="TableBody">
+    <tbody id="tableBody">
         <!-- Row 1 -->
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox1" /></td>
@@ -397,6 +431,7 @@
             <td class="ps-4 pe-4">Computer Science</td>
             <td class="ps-4 pe-4">james.brown@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
+
             <td class="ps-4 pe-4">
                 <!-- Dropdown with 3 dots -->
                 <div class="dropdown">
