--- a/admin/teacher.html
+++ b/admin/teacher.html
@@ -140,7 +140,10 @@
           
             <!-- Dropdown for notifications -->
           <!-- Notification Dropdown -->
-  <ul class="dropdown-menu dropdown-menu-end custom-dropdown-width" aria-labelledby="notificationDropdown">
+  <!-- Include Font Awesome CDN for icons -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+<ul class="dropdown-menu dropdown-menu-end custom-dropdown-width" aria-labelledby="notificationDropdown">
     <!-- Notification Header -->
     <li class="dropdown-item text-dark d-flex justify-content-between">
       <span><b>Notification (4)</b></span>
@@ -149,16 +152,17 @@
     <li><hr class="dropdown-divider"></li>
 
     <!-- Notification Items -->
-    <li><a class="dropdown-item" href="#">New message from Sarah</a></li>
-    <li><a class="dropdown-item" href="#">John commented on your post</a></li>
-    <li><a class="dropdown-item" href="#">3 new assignments are due</a></li>
-    <li><a class="dropdown-item" href="#">Your profile has been updated</a></li>
+<li><a class="dropdown-item " href=""><i class="bi bi-rocket-takeoff me-1" style="font-size: 18px;"></i> New message from Sarah<br><span class="text-muted ms-4"><small>10 min ago</small></span></a></li>
+<li><a class="dropdown-item" href="#"><i class="bi bi-rocket-takeoff me-1" style="font-size: 18px;"></i> John commented on your post<br><span class="text-muted ms-4"><small>15 min ago</small></span></a></li>
+<li><a class="dropdown-item" href="#"><i class="bi bi-rocket-takeoff me-1" style="font-size: 18px;"></i> 3 new assignments are due<br><span class="text-muted ms-4"><small>30 min ago</small></span></a></li>
+<li><a class="dropdown-item" href="#"><i class="bi bi-rocket-takeoff me-1" style="font-size: 18px;"></i> Your profile has been updated<br><span class="text-muted ms-4"><small>1 hour ago</small></span></a></li>
 
     <li><hr class="dropdown-divider"></li>
-          <li class="text-center w-100">
-      <a class="dropdown-item" href="#"><b>View all notifications</b></a>
+    
+    <li class="text-center w-100">
+      <a class="dropdown-item view" href="#"><b>View all notifications</b></a>
     </li>
-  </ul>
+</ul>
          </div>
 
           <!-- Profile Dropdown -->
